--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,14 @@ pytesseract
 Pillow
 tgcrypto
 ffmpeg
-Flask==2.2.2
-gunicorn==20.1.0
-aiohttp==3.8.1
-pymongo[srv]==3.12.3
+fastapi==0.74.*
+requests==2.27.*
+sentencepiece==0.1.*
+torch==1.11.*
+transformers==4.*
+uvicorn[standard]==0.17.*
 coloredlogs
 watchdog
-Werkzeug==2.2.2
 pydub
 audioread
 pypdfium2==2.8.0
